--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsx-a11y": "6.4.0",
     "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-react": "7.21.5"
+    "eslint-plugin-react": "7.21.5",
+    "typescript": "^4.0.5"
   },
   "devDependencies": {
     "babel-eslint": "10.1.0",
