--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "ts-node ./scripts/build.ts",
     "add": "ts-node ./scripts/addMissingRules.ts",
+    "dev:site": "cd ./site && fe dev",
     "test:rulesCoverage": "ts-node ./scripts/rulesCoverage.ts"
   },
   "homepage": "https://alloyteam.github.io/eslint-config-alloy/",
@@ -24,32 +25,21 @@
     "typescript"
   ],
   "author": "ineo6",
-  "contributors": [
-    "heyli <lcxfs1991@gmail.com>",
-    "Swan <noreply@github.com>",
-    "DiamondYuan <admin@diamondyuan.com>",
-    "Dash Chen <noreply@github.com>",
-    "lzw <mingxin2014@gmail.com>",
-    "ryoliu <sfesh@163.com>",
-    "sunhui04 <sunhui04@meituan.com>"
-  ],
+  "contributors": [],
   "license": "MIT",
   "peerDependencies": {
     "@typescript-eslint/eslint-plugin": "4.5.0",
     "@typescript-eslint/parser": "4.5.0",
     "babel-eslint": "10.1.0",
-    "eslint": "7.12.0",
-    "eslint-config-airbnb": "18.2.0",
-    "eslint-config-airbnb-base": "14.2.0",
-    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint": "^7.24.0",
     "eslint-plugin-eslint-comments": "3.2.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsx-a11y": "6.4.0",
-    "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "7.21.5",
     "typescript": "^4.0.5"
   },
   "devDependencies": {
+    "@fejs/fe": "^1.1.1",
+    "@fejs/preset-react": "^1.0.0",
+    "@types/cookie": "^0.4.0",
     "@types/doctrine": "^0.0.3",
     "@types/eslint": "^7.2.10",
     "@types/node": "^15.3.0",
@@ -59,6 +49,7 @@
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
     "babel-eslint": "10.1.0",
+    "cookie": "^0.4.1",
     "eslint": "^7.24.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-eslint-comments": "3.2.0",
@@ -68,7 +59,14 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-vue": "^7.9.0",
     "insert-tag": "^0.1.2",
+    "mobi-plugin-color": "^1.0.0",
+    "mobi.css": "^3.1.1",
+    "parcel": "^2.0.0-beta.2",
     "prettier": "^2.3.0",
+    "querystring": "^0.2.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-tooltip": "^4.2.19",
     "rimraf": "^3.0.2",
     "typescript": "^4.2.4",
     "xml-escape": "^1.1.0"
