--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-dom": "^17.0.2",
     "react-tooltip": "^4.2.19",
     "rimraf": "^3.0.2",
+    "ts-node": "^10.0.0",
     "typescript": "^4.2.4",
     "xml-escape": "^1.1.0"
   },
