--- a/package.json
+++ b/package.json
@@ -32,15 +32,6 @@
   "author": "ineo6",
   "contributors": [],
   "license": "MIT",
-  "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "4.5.0",
-    "@typescript-eslint/parser": "4.5.0",
-    "babel-eslint": "10.1.0",
-    "eslint": "^7.24.0",
-    "eslint-plugin-eslint-comments": "3.2.0",
-    "eslint-plugin-react": "7.21.5",
-    "typescript": "^4.0.5"
-  },
   "devDependencies": {
     "@fejs/fe": "^1.1.1",
     "@fejs/preset-react": "^1.0.0",
@@ -51,18 +42,14 @@
     "@types/prettier": "^2.2.3",
     "@types/rimraf": "^3.0.0",
     "@types/xml-escape": "^1.1.0",
-    "@typescript-eslint/eslint-plugin": "^4.23.0",
-    "@typescript-eslint/parser": "^4.23.0",
+    "@typescript-eslint/eslint-plugin": "4.27.0",
+    "@typescript-eslint/parser": "4.27.0",
     "babel-eslint": "10.1.0",
     "cookie": "^0.4.1",
-    "eslint": "^7.24.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-eslint-comments": "3.2.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsx-a11y": "6.4.0",
-    "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-vue": "^7.9.0",
+    "eslint": "7.29.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-react": "7.24.0",
+    "eslint-plugin-vue": "7.10.0",
     "insert-tag": "^0.1.2",
     "mobi-plugin-color": "^1.0.0",
     "mobi.css": "^3.1.1",
@@ -76,6 +63,7 @@
     "rimraf": "^3.0.2",
     "ts-node": "^10.0.0",
     "typescript": "^4.2.4",
+    "vue-eslint-parser": "7.6.0",
     "xml-escape": "^1.1.0"
   },
   "publishConfig": {
