--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "ts-node ./test/index.ts && npm run test:rulesCoverage",
     "test:rulesCoverage": "ts-node ./scripts/rulesCoverage.ts",
     "lint": "run-s eslint prettier",
+    "update": "npm install --save-dev @babel/eslint-parser@latest @babel/preset-react@latest @types/eslint@latest @types/prettier@latest @typescript-eslint/eslint-plugin@latest @typescript-eslint/parser@latest eslint@7 eslint-config-prettier@latest eslint-plugin-react@latest eslint-plugin-vue@latest prettier@latest typescript@latest vue-eslint-parser@latest",
     "eslint": "eslint --ext .js,.jsx,.ts,.tsx,.vue --ignore-pattern \"bad.*\" .",
     "prettier": "prettier -l \"./**/*\""
   },
@@ -33,37 +34,39 @@
   "contributors": [],
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.16.7",
+    "@babel/eslint-parser": "^7.16.5",
+    "@babel/preset-react": "^7.16.7",
     "@fejs/fe": "^1.1.1",
     "@fejs/preset-react": "^1.0.0",
     "@types/cookie": "^0.4.0",
     "@types/doctrine": "^0.0.3",
-    "@types/eslint": "^7.2.10",
+    "@types/eslint": "^8.2.2",
     "@types/node": "^15.3.0",
-    "@types/prettier": "^2.2.3",
+    "@types/prettier": "^2.4.3",
     "@types/rimraf": "^3.0.0",
     "@types/xml-escape": "^1.1.0",
-    "@typescript-eslint/eslint-plugin": "4.27.0",
-    "@typescript-eslint/parser": "4.27.0",
-    "babel-eslint": "10.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
     "cookie": "^0.4.1",
-    "eslint": "7.29.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-react": "7.24.0",
-    "eslint-plugin-vue": "7.10.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-vue": "^7.20.0",
     "insert-tag": "^0.1.2",
     "mobi-plugin-color": "^1.0.0",
     "mobi.css": "^3.1.1",
     "npm-run-all": "^4.1.5",
     "parcel": "^2.0.0-beta.2",
-    "prettier": "^2.3.0",
+    "prettier": "^2.5.1",
     "querystring": "^0.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-tooltip": "^4.2.19",
     "rimraf": "^3.0.2",
     "ts-node": "^10.0.0",
-    "typescript": "^4.2.4",
-    "vue-eslint-parser": "7.6.0",
+    "typescript": "^4.5.4",
+    "vue-eslint-parser": "7.11.0",
     "xml-escape": "^1.1.0"
   },
   "publishConfig": {
