--- a/package.json
+++ b/package.json
@@ -49,15 +49,13 @@
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "cookie": "^0.4.1",
+    "doctrine": "^3.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-vue": "^7.20.0",
     "insert-tag": "^0.1.2",
-    "mobi-plugin-color": "^1.0.0",
-    "mobi.css": "^3.1.1",
     "npm-run-all": "^4.1.5",
-    "parcel": "^2.0.0-beta.2",
     "prettier": "^2.5.1",
     "querystring": "^0.2.1",
     "react": "^17.0.2",
