--- a/package.json
+++ b/package.json
@@ -43,36 +43,36 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.16.7",
-    "@babel/eslint-parser": "^7.16.5",
+    "@babel/eslint-parser": "^7.17.0",
     "@babel/preset-react": "^7.16.7",
     "@fejs/fe": "^1.1.1",
     "@fejs/preset-react": "^1.0.0",
     "@types/cookie": "^0.4.0",
     "@types/doctrine": "^0.0.3",
-    "@types/eslint": "^8.2.2",
+    "@types/eslint": "^8.4.1",
     "@types/node": "^15.3.0",
-    "@types/prettier": "^2.4.3",
+    "@types/prettier": "^2.6.0",
     "@types/rimraf": "^3.0.0",
     "@types/xml-escape": "^1.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.9.1",
-    "@typescript-eslint/parser": "^5.9.1",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
     "cookie": "^0.4.1",
     "doctrine": "^3.0.0",
     "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "^7.28.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-vue": "^7.20.0",
     "insert-tag": "^0.1.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.5.1",
+    "prettier": "^2.6.2",
     "querystring": "^0.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-tooltip": "^4.2.19",
     "rimraf": "^3.0.2",
     "ts-node": "^10.0.0",
-    "typescript": "^4.5.4",
-    "vue-eslint-parser": "7.11.0",
+    "typescript": "^4.6.3",
+    "vue-eslint-parser": "^8.3.0",
     "xml-escape": "^1.1.0"
   },
   "publishConfig": {
