--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "add": "ts-node ./scripts/addMissingRules.ts",
     "dev:site": "cd ./site && fe dev",
     "build:site": "cd ./site && fe build",
-    "test": "ts-node ./test/index.ts && npm run test:rulesCoverage",
-    "test:rulesCoverage": "ts-node ./scripts/rulesCoverage.ts",
+    "test": "ts-node ./test/index.ts",
+    "rulesCoverage": "ts-node ./scripts/rulesCoverage.ts",
     "lint": "run-s eslint prettier",
     "update": "npm install --save-dev @babel/eslint-parser@latest @babel/preset-react@latest @types/eslint@latest @types/prettier@latest @typescript-eslint/eslint-plugin@latest @typescript-eslint/parser@latest eslint@7 eslint-config-prettier@latest eslint-plugin-react@latest eslint-plugin-vue@7 prettier@latest typescript@latest vue-eslint-parser@latest",
     "eslint": "eslint --ext .js,.jsx,.ts,.tsx,.vue --ignore-pattern \"bad.*\" .",
