chore: 更新deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,25 +6,27 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: '14'
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: '14'
+
       - name: Install Packages
         run: npm install
+
       - name: Test
         run: npm test
+
       - name: Build Eslint
         run: npm run build
+
       - name: Build Site
         run: npm run build:site
 
